# interview

./: CMakeLists.txt
BerlinClock/: BerlinClock.h  CMakeLists.txt  ClockFactory.cpp  ClockFactory.h  ClockHand.h  Lamp.h  Types.h
BerlinClock/test/: ClockTest.cpp
CircularPrinter/: CMakeLists.txt  Printer.cpp  README.md
Formatter/: CMakeLists.txt  README.md  main.cpp
Printer/: CMakeLists.txt  README.md  main.cpp
ubs_BerlinClock/: BerlinClock.h  ClockFactory.cpp  ClockFactory.h  ClockHand.h  Lamp.h  README.md
ubs_BerlinClock/test/: ClockTest.cpp
